--- a/turismo/public/css/styles.css
+++ b/turismo/public/css/styles.css
@@ -1,5 +1,9 @@
 @charset "UTF-8";
-
+.card-image {
+  width: 400px !important;
+  height: 250px !important;
+  object-fit: cover !important;
+}
 .w3-whatsapp {
   position: fixed;
   left: 2%;
